<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Späti Berlin</string>
    <string name="action_add">Hinzufügen</string>
    <string name="action_map">Karte</string>
    <string name="action_favorites">Favoriten</string>
    <string name="store_image">Bild des Späti</string>
    <string name="favorite">Favorit</string>
    <string name="openings">Öffnungszeiten</string>
    <string name="inventory">Angebot</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_about">Info</string>
    <string name="spaeti_logo">Logo</string>
    <string name="action_search">Suchen</string>
    <string name="search_hint">Strasse, U-Bahnhof, Späti usw.</string>
    <string name="adress">Adresse</string>
    <string name="name">Name</string>
    <string name="submit_spaeti">Absenden</string>
    <string name="move_marker_or_enter">Marker verschieben oder eintragen</string>
    <string name="search_adress">Ort suchen</string>
    <string name="pizza">Pizza</string>
    <string name="chips">Chips</string>
    <string name="condom">Kondome</string>
    <string name="newspaper">Zeitungen</string>
    <string name="version">Version 0.4.0</string>
    <string name="website">www.spaetiberlin.de</string>

</resources>