<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#555555"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="155dp"
        android:background="#333333"
        android:onClick="goToAddSpaeti"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/spaeti_logo"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:onClick="goToMap"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/location_map"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_map"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:onClick="goToAddSpaeti"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/content_new"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_add"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:onClick="goToFavorites"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/rating_important"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_favorites"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:onClick="goToSettings"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/rating_important"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_settings"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="77dp"
        android:onClick="goToAbout"
        android:orientation="horizontal"
        android:paddingLeft="15dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/rating_important"
            android:drawablePadding="15dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/action_about"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="26sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#ffffff" />

</LinearLayout>